--- a/Report.Rmd
+++ b/Report.Rmd
@@ -48,21 +48,35 @@ theme_set(theme_minimal())
 #   caption: Caption for the generated table. OPTIONAL.
 #   show_cumulative: Required to be turned on in order to see cumulative
 #                    frequencies. OPTIONAL. DEFAULT: FALSE
-print_freq_table <- function(x, var_name, caption = NULL, show_cumulative = FALSE) {
-  df <- as.data.frame(table(x))
+#   show_mode: Required to be turned on in order to highlight the modal
+#              category in the frequency table. OPTIONAL. DEFAULT: FALSE
+print_freq_table <- function(x, var_name, caption = NULL,
+                             show_cumulative = FALSE,
+                             show_mode = FALSE) {
   
+  x <- as.factor(x)
+  
+  df <- as.data.frame(table(x))
   colnames(df) <- c(var_name, "Frequency")
   
-  # Calculate Relative Frequency (Percentage or Proportion)
   df$Proportion <- round(100 * df$Frequency / sum(df$Frequency), 2)
   
-  # Optionally, calculate Cumulative Absolute and Cumulative Relative Frequencies. 
   if (show_cumulative) {
     df$`Cum. Freq.` <- cumsum(df$Frequency)
-    df$`Cum. %`    <- cumsum(df$Proportion)
+    df$`Cum. %` <- cumsum(df$Proportion)
   }
   
-  # Handle Caption (Auto-generate if NULL)
+  # Highlight mode ONLY if flag is TRUE
+  if (show_mode) {
+    mode_value <- df[[var_name]][which.max(df$Frequency)]
+    
+    df[[var_name]] <- ifelse(
+      df[[var_name]] == mode_value,
+      paste0("**", df[[var_name]], " (Mode)**"),
+      as.character(df[[var_name]])
+    )
+  }
+  
   if (is.null(caption)) {
     caption <- paste(var_name, "Frequency Table")
   }
@@ -70,7 +84,7 @@ print_freq_table <- function(x, var_name, caption = NULL, show_cumulative = FALS
   knitr::kable(
     df,
     caption = caption,
-    align = c('l', 'c', 'c', 'c', 'c'),
+    align = 'c',
     format = "markdown"
   )
 }
@@ -160,15 +174,13 @@ ggplot(hr, aes(x = Attrition, fill = Attrition)) +
 ### Job Satisfaction (Ordinal)
 
 ```{r job-satisfaction-univariate, echo = FALSE, results = 'asis'}
-print_freq_table(hr$JobSatisfaction, "Job Satisfaction", show_cumulative = TRUE)
-print_mode(hr$JobSatisfaction)
+print_freq_table(hr$JobSatisfaction, "Job Satisfaction", show_cumulative = TRUE, show_mode = TRUE)
 ```
 
 ### Work Life Balance (Ordinal)
 
 ```{r work-life-balance-univariate, echo = FALSE, results = 'asis'}
-print_freq_table(hr$WorkLifeBalance, "Work Life Balance", show_cumulative = TRUE)
-print_mode(hr$WorkLifeBalance)
+print_freq_table(hr$WorkLifeBalance, "Work Life Balance", show_cumulative = TRUE, show_mode = TRUE)
 ```
 
 ## Financial Structure
@@ -178,8 +190,7 @@ This section summarizes the job hierarchy, income distribution, and overtime sta
 ### Job Level (Ordinal)
 
 ```{r job-level-univariate, echo = FALSE}
-print_freq_table(hr$JobLevel, "Job Level", show_cumulative = TRUE)
-print_mode(hr$JobLevel)
+print_freq_table(hr$JobLevel, "Job Level", show_cumulative = TRUE, show_mode = TRUE)
 ```
 ### Monthly Income (Continuous)
 
