update fig captions

--- a/Report.Rmd
+++ b/Report.Rmd
@@ -278,7 +278,7 @@ This section analyzes Age and Years at Company using descriptive statistics and 
 
 ### Age (Numeric)
 
-```{r age-univariate}
+```{r age-univariate, echo = FALSE, fig.cap = "Distribution of employee age. The boxplot (left) summarizes dispersion and outliers, and the empirical cumulative distribution function (right) shows the cumulative age distribution."}
 age_stats <- data.frame(
   Variance = round(var(hr$Age), 2),
   SD = round(sd(hr$Age), 2),
@@ -313,7 +313,7 @@ par(mfrow = c(1, 1))
 
 ### Years At Company (Numeric)
 
-```{r years-at-company-univariate}
+```{r years-at-company-univariate, echo=FALSE, fig.cap="Distribution of years at company showing low median tenure and a long right tail with high-tenure outliers."}
 yac_stats <- data.frame(
   Mean     = round(mean(hr$YearsAtCompany), 2),
   Median   = round(median(hr$YearsAtCompany), 2),
