--- a/Report.Rmd
+++ b/Report.Rmd
@@ -15,7 +15,7 @@ output:
     number_sections: true
 ---
 
-```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
+```{r setup, echo = FALSE, message = FALSE, warning = FALSE}
 # Clear Environment.
 rm(list = ls(all.names = TRUE))
 
@@ -36,7 +36,7 @@ knitr::opts_chunk$set(
 theme_set(theme_minimal())
 ```
 
-```{r helpers, echo=FALSE}
+```{r helpers}
 # ----------------- Helper functions to follow 'DRY' policy.--------------------
 
 # This function allows for generating absolute, relative,
@@ -53,7 +53,6 @@ theme_set(theme_minimal())
 print_freq_table <- function(x, var_name, caption = NULL,
                              show_cumulative = FALSE,
                              show_mode = FALSE) {
-  
   x <- as.factor(x)
   
   df <- as.data.frame(table(x))
@@ -111,14 +110,14 @@ We analyze **eight** key variables classified into the following datatypes :
 - **Numeric - Discrete**: `Age`, `YearsAtCompany`
 - **Numeric - Continuous**: `MonthlyIncome`
 
-```{r load-data, echo = FALSE}
+```{r load-data}
 raw_data     <- read.csv("data/ibm-hr-attrition.csv", stringsAsFactors = FALSE)
 hr           <- raw_data[, c("Attrition", "OverTime", "JobLevel",
                              "JobSatisfaction", "WorkLifeBalance", "Age",
                              "YearsAtCompany", "MonthlyIncome")]
 ```
 
-```{r preprocessing, echo = FALSE}
+```{r preprocessing}
 # Nominal Variables.
 hr$Attrition <- as.factor(hr$Attrition)
 hr$OverTime  <- as.factor(hr$OverTime)
@@ -142,7 +141,7 @@ hr$WorkLifeBalance <- factor(hr$WorkLifeBalance,
 
 The dataset contains `r nrow(hr)` observations and `r ncol(hr)` variables.
 
-```{r data-summary, echo = FALSE, results = 'asis'}
+```{r data-summary}
 knitr::kable(t(head(hr)),
              caption = "First six observations (Transposed View)")
 ```
@@ -153,9 +152,11 @@ knitr::kable(t(head(hr)),
 
 This section performs a uni-variate analysis to characterize employee sentiment and professional status, examining the frequency distributions of key qualitative variables.
 
+\newpage
+
 ### Attrition Status (Binary Nominal)
  
-```{r attrition-univariate, echo = FALSE, fig.cap = 'Bar plot of Attrition Status illustrating a significant class imbalance with high employee retention', fig.height = 2.5, fig.width = 3}
+```{r attrition-univariate, fig.cap = 'Bar plot of Attrition Status illustrating a significant class imbalance with high employee retention', fig.height = 2.5, fig.width = 3}
 print_freq_table(hr$Attrition, "Attrition Status")
 
 ggplot(hr, aes(x = Attrition, fill = Attrition)) +
@@ -174,7 +175,7 @@ ggplot(hr, aes(x = Attrition, fill = Attrition)) +
 
 ### Job Satisfaction (Ordinal)
 
-```{r job-satisfaction-univariate, echo = FALSE, results = 'asis'}
+```{r job-satisfaction-univariate, results = 'asis'}
 print_freq_table(hr$JobSatisfaction,
                  "Job Satisfaction",
                  show_cumulative = TRUE,
@@ -186,7 +187,7 @@ print_freq_table(hr$JobSatisfaction,
 
 ### Work Life Balance (Ordinal)
 
-```{r work-life-balance-univariate, echo = FALSE, results = 'asis'}
+```{r work-life-balance-univariate, results = 'asis'}
 print_freq_table(hr$WorkLifeBalance,
                  "Work Life Balance",
                  show_cumulative = TRUE,
@@ -201,15 +202,18 @@ This section summarizes the job hierarchy, income distribution, and overtime sta
 
 ### Job Level (Ordinal)
 
-```{r job-level-univariate, echo = FALSE}
-print_freq_table(hr$JobLevel, "Job Level", show_cumulative = TRUE, show_mode = TRUE)
+```{r job-level-univariate}
+print_freq_table(hr$JobLevel,
+                 "Job Level",
+                 show_cumulative = TRUE,
+                 show_mode = TRUE)
 ```
 
 **Interpretation:** The workforce structure exhibits a distinct pyramidal hierarchy, heavily concentrated in early-career roles. Entry Level (36.9%, n=543) and Junior (36.3%, n=534) positions dominate, cumulatively accounting for 73.3% of the organization. In contrast, upper management is exclusive, with Executives representing only 4.7% of the total population.
 
 ### Monthly Income (Continuous)
 
-```{r monthly-income-univariate, echo = FALSE, fig.cap = 'Histogram of Monthly Income. The distribution is right-skewed, indicated by the Mean (Red) being higher than the Median (Blue)', fig.height = 3.5, fig.width = 4}
+```{r monthly-income-univariate, fig.cap = 'Histogram of Monthly Income. The distribution is right-skewed, indicated by the Mean (Red) being higher than the Median (Blue)', fig.height = 3.5, fig.width = 4}
 avg_inc <- mean(hr$MonthlyIncome)
 med_inc <- median(hr$MonthlyIncome)
 quants  <- quantile(hr$MonthlyIncome, probs = c(0.25, 0.5, 0.75))
@@ -266,7 +270,7 @@ knitr::kable(
 
 ### Over Time (Binary Nominal)
 
-```{r overtime-univariate, echo = FALSE}
+```{r overtime-univariate}
 print_freq_table(hr$OverTime, "Over Time")
 ```
 
@@ -278,7 +282,7 @@ This section analyzes Age and Years at Company using descriptive statistics and 
 
 ### Age (Numeric)
 
-```{r age-univariate, echo = FALSE, fig.cap = "Distribution of employee age. The boxplot (left) summarizes dispersion and outliers, and the empirical cumulative distribution function (right) shows the cumulative age distribution."}
+```{r age-univariate, fig.cap = "Distribution of employee age. The boxplot (left) summarizes dispersion and outliers, and the empirical cumulative distribution function (right) shows the cumulative age distribution."}
 age_stats <- data.frame(
   Variance = round(var(hr$Age), 2),
   SD = round(sd(hr$Age), 2),
@@ -300,7 +304,7 @@ boxplot(
 
 plot(
   ecdf(hr$Age),
-  main = "Empirical CDF of Age",
+  main = "ECDF of Age",
   xlab = "Age",
   ylab = "F(Age)",
   col = "darkred",
@@ -337,7 +341,7 @@ boxplot(
 
 plot(
   ecdf(hr$YearsAtCompany),
-  main = "Empirical CDF of Years at Company",
+  main = "ECDF of Years at Company",
   xlab = "Years at Company",
   ylab = "F(Years at Company)",
   col = "purple",
